Remove extraneous warnings when building and running the built app